[package]
name = "equilibrio"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.213", features = ["derive"] }
tokio = { version = "1.41.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
